changes in AuthHandler, GetAuthUser and model user
