# api/authHandler.go
@@ -10,16 +10,17 @@ import (
 	"net/http"
 )
 
-// NewAuthHandler godoc
+// AuthHandler godoc
 // @Summary Авторизация по initData
-// @Description Принимает строку initData в теле запроса и создает или обновляет пользователя в базе
+// @Description Принимает строку initData и создает нового пользователя, если он еще не зарегистрирован
 // @Tags Авторизация
 // @Accept json
 // @Produce json
-// @Param input body models.InitDataRequest true "Строка initData"
-// @Success 201 {object} map[string]interface{} "Пользователь успешно авторизован"
-// @Failure 400 {object} map[string]string "Неверные данные запроса"
-// @Failure 500 {object} map[string]string "Не удалось авторизовать пользователя"
+// @Param input body models.InitDataRequest true "InitData от Telegram"
+// @Success 201 {object} map[string]interface{} "Пользователь успешно авторизован (создан)"
+// @Success 200 {object} map[string]interface{} "Пользователь уже зарегистрирован"
+// @Failure 400 {object} map[string]interface{} "Неверные данные запроса или ошибка парсинга"
+// @Failure 500 {object} map[string]interface{} "Внутренняя ошибка сервера (БД, транзакция и т.п.)"
 // @Router /auth [post]
 func AuthHandler(c *gin.Context) {
 	var req models.InitDataRequest
@@ -47,6 +48,34 @@ func AuthHandler(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при создании транзакции: " + err.Error()})
 	}
 
+	commited := false
+	defer func() {
+		if !commited {
+			tx.Rollback(c.Request.Context())
+		}
+	}()
+
+	var exist bool
+	err = tx.QueryRow(c.Request.Context(), "SELECT EXISTS (SELECT 1 FROM \"user\" WHERE tg_userid = $1)", input.User.ID).Scan(&exist)
+	if err != nil {
+		log.Println("Ошибка в запросе проверки ID: ", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Не удалось проверить ID пользователя: "})
+		return
+	}
+
+	if exist {
+		c.JSON(http.StatusOK, gin.H{
+			"message": "Пользователь уже зарегистрирован",
+			"exist":   exist,
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"message": "Пользователь новый",
+		"exist":   exist,
+	})
+
 	query := "INSERT INTO \"user\" (tg_username, tg_userid, tg_first_name, tg_last_name, photo_url, is_premium, ui_language_code, allows_write_to_pm, auth_date) VALUES ($1, $2, $3, $4, $5, $6, $7, $8,$9) RETURNING id"
 	log.Println("Выполняется запрос: ", query)
 
@@ -65,18 +94,12 @@ func AuthHandler(c *gin.Context) {
 		input.AuthDateRaw,
 	).Scan(&userID)
 
-	if err != nil {
-		tx.Rollback(c.Request.Context())
-		log.Println("Ошибка при создании пользователя: ", err)
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Не удалось создать пользователя"})
-		return
-	}
-
 	if err := tx.Commit(c.Request.Context()); err != nil {
 		log.Println("Ошибка при коммите транзакции: ", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Transaction commit error"})
 		return
 	}
+	commited = true
 
 	c.JSON(http.StatusCreated, gin.H{
 		"id":      userID,
@@ -94,7 +117,7 @@ func AuthHandler(c *gin.Context) {
 // @Failure 500 {object} map[string]string
 // @Router /auth/users [get]
 func GetAuthUser(c *gin.Context) {
-	rows, err := config.DB.Query(context.Background(), "SELECT id, tg_username, tg_first_name, tg_last_name, photo_url, is_premium, ui_language_code, allows_write_to_pm, auth_date FROM \"user\"")
+	rows, err := config.DB.Query(context.Background(), "SELECT id, tg_username, tg_userid, tg_first_name, tg_last_name, photo_url, is_premium, ui_language_code, allows_write_to_pm, auth_date FROM \"user\"")
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка в запросе: " + err.Error()})
 		return
@@ -104,7 +127,7 @@ func GetAuthUser(c *gin.Context) {
 	var users []models.User
 	for rows.Next() {
 		var user models.User
-		err = rows.Scan(&user.ID, &user.TgUsername, &user.TgFirstName, &user.TgLastName, &user.PhotoURL, &user.IsPremium, &user.UILanguageCode, &user.AllowsWriteToPM, &user.AuthDate)
+		err = rows.Scan(&user.ID, &user.TgUsername, &user.TgUserID, &user.TgFirstName, &user.TgLastName, &user.PhotoURL, &user.IsPremium, &user.UILanguageCode, &user.AllowsWriteToPM, &user.AuthDate)
 		if err != nil {
 			c.JSON(http.StatusInternalServerError, gin.H{"error": "Ошибка при сканировании: " + err.Error()})
 			return
