# docs/swagger.json
@@ -10,7 +10,7 @@
     "paths": {
         "/auth": {
             "post": {
-                "description": "Принимает строку initData в теле запроса и создает или обновляет пользователя в базе",
+                "description": "Принимает строку initData и создает нового пользователя, если он еще не зарегистрирован",
                 "consumes": [
                     "application/json"
                 ],
@@ -23,7 +23,7 @@
                 "summary": "Авторизация по initData",
                 "parameters": [
                     {
-                        "description": "Строка initData",
+                        "description": "InitData от Telegram",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -33,29 +33,32 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "Пользователь уже зарегистрирован",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
                     "201": {
-                        "description": "Пользователь успешно авторизован",
+                        "description": "Пользователь успешно авторизован (создан)",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
                         }
                     },
                     "400": {
-                        "description": "Неверные данные запроса",
+                        "description": "Неверные данные запроса или ошибка парсинга",
                         "schema": {
                             "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "additionalProperties": true
                         }
                     },
                     "500": {
-                        "description": "Не удалось авторизовать пользователя",
+                        "description": "Внутренняя ошибка сервера (БД, транзакция и т.п.)",
                         "schema": {
                             "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -710,6 +713,9 @@
                     "$ref": "#/definitions/models.Team"
                 },
                 "team_id": {
+                    "type": "integer"
+                },
+                "tg_userid": {
                     "type": "integer"
                 },
                 "username": {
